<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/Dashboard"
            android:icon="@drawable/home"
            android:title="@string/dashboard"
            android:fontFamily="@font/amaranth"
            />
        <item
            android:id="@+id/allentries"
            android:icon="@drawable/task"
            android:title="@string/allentries"
            android:fontFamily="@font/amaranth"
            />
        <item
            android:id="@+id/commercial"
            android:icon="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:title="@string/commercial"
            android:fontFamily="@font/amaranth"/>
        <item
            android:id="@+id/LicensorCommercial"
            android:title="@string/Licensor"
            android:fontFamily="@font/amaranth"
            android:visible="false"/>
        <item
            android:id="@+id/LicenseeCommercial"
            android:title="@string/Licensee"
            android:fontFamily="@font/amaranth"
            android:visible="false"/>
        <item
            android:id="@+id/SellerRCommercial"
            android:title="@string/Seller"
            android:fontFamily="@font/amaranth"
            android:visible="false"/>
        <item
            android:id="@+id/BuyerCommercial"
            android:title="@string/Buyer"
            android:fontFamily="@font/amaranth"
            android:visible="false"/>
        <item
            android:id="@+id/residential"
            android:title="@string/residential"
            android:fontFamily="@font/amaranth"
            android:icon="@drawable/ic_baseline_keyboard_arrow_down_24"
            />
        <item
            android:id="@+id/LicensorResidential"
            android:title="@string/Licensor"
            android:fontFamily="@font/amaranth"
            android:visible="false"/>
        <item
            android:id="@+id/LicenseeResidential"
            android:title="@string/Licensee"
            android:fontFamily="@font/amaranth"
            android:visible="false"/>
        <item
            android:id="@+id/SellerResidential"
            android:title="@string/Seller"
            android:fontFamily="@font/amaranth"
            android:visible="false"/>
        <item
            android:id="@+id/BuyerResidential"
            android:title="@string/Buyer"
            android:fontFamily="@font/amaranth"
            android:visible="false"/>
        <item
            android:id="@+id/LogOut"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout"
            android:fontFamily="@font/amaranth"
          />


    </group>
</menu>