<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8.0dp"
    android:layout_marginRight="8.0dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="20dp"
    tools:context=".Activity.Licensee_Residential">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            android:layout_marginTop="7dp"
            app:boxStrokeColor="@color/black"
            app:boxBackgroundColor="@color/white"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etdate"
                android:layout_marginTop="10dp"
                android:hint="@string/date"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/amaranth"
                android:paddingStart="0dp"
                android:paddingBottom="0dp"
                android:focusableInTouchMode="false"
                android:textSize="16sp"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            android:layout_marginTop="7dp"
            app:boxStrokeColor="@color/black"
            app:boxBackgroundColor="@color/white"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etname"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="0dp"
                android:paddingBottom="0dp"
                android:fontFamily="@font/amaranth"
                android:layout_marginTop="7dp"
                android:textCursorDrawable="@drawable/color_cursor"
                android:hint="@string/name"
                android:textSize="16sp"
               />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            android:layout_marginTop="7dp"
            app:boxStrokeColor="@color/black"
            app:boxBackgroundColor="@color/white"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etmob1"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingStart="0dp"
                android:paddingBottom="0dp"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/amaranth"
                android:textCursorDrawable="@drawable/color_cursor"
               android:hint="@string/mob_no_1"
                android:textSize="16sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            android:layout_marginTop="7dp"
            app:boxStrokeColor="@color/black"
            app:boxBackgroundColor="@color/white"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etmob2"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingStart="0dp"
                android:paddingBottom="0dp"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/amaranth"
                android:textCursorDrawable="@drawable/color_cursor"
                android:hint="@string/mob_no_2"
                android:textSize="16sp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_location_city_24"
            >
            <AutoCompleteTextView
                android:id="@+id/typespinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:fontFamily="@font/amaranth"
                android:textSize="18sp"
                android:hint="@string/type"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_location_on_24"
            >
            <AutoCompleteTextView
                android:id="@+id/locspinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:fontFamily="@font/amaranth"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:hint="@string/location"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/amaranth"
            android:text="@string/remarks"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            android:layout_marginTop="7dp"
            app:boxStrokeColor="@color/black"
            app:boxBackgroundColor="@color/white"
            >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/etremark"
           android:layout_gravity="center"
            android:gravity="start"
            android:fontFamily="@font/amaranth"
            android:background="@drawable/rounded_edge"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_marginTop="7dp"
            android:textSize="16sp"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center"
            android:id="@+id/btnsave"
            android:fontFamily="@font/amaranth"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</ScrollView>